# DBProSync

./: .gitignore  DatabaseSyncTool.spec  LICENSE.txt  README.txt  build.py  config.json  config.json.bak  create_support_files.py  debug_iscc.py  fix_config_template.py  installer.iss  iscc_debug.py  main.py  main_backup.py  pyproject.toml  requirements.txt  setup_instructions.txt  test_deps.py  windows_iscc_fix.py
core/: config_manager.py  database_manager.py  models.py  sync_engine.py  sync_worker.py
ui/: database_connection_dialog.py  log_handler.py  main_window.py  password_dialog.py  settings_dialog.py  system_tray.py
utils/: app_paths.py  constants.py  custom_encoder.py  startup_manager.py
